--- a/module3_solution/foundItems.html
+++ b/module3_solution/foundItems.html
@@ -3,6 +3,6 @@
 <ol>
   <li ng-repeat="item in found">
     {{ item.description }}
-    <button ng-click="onRemove({index: $index});">Remove Item</button>
+    <button ng-click="onRemove({index: $index});">Don't want this one!</button>
   </li>
 </ol>
