--- a/module5_solution/src/public/signup/signup.html
+++ b/module5_solution/src/public/signup/signup.html
@@ -3,24 +3,23 @@
         <h1>Sign Up Form</h1>
         <br>
 
-        <input class="visibleText" type="text" name="firstname" ng-model="sign.user.firstname" placeholder="First Name" minlength="4" required>
+        <input class="visibleText" type="text" name="firstname" ng-model="sign.user.firstname" placeholder="First Name" required>
         <span ng-if="((signForm.firstname.$error.required || signForm.firstname.$invalid) && signForm.firstname.$touched)">
-            Firstname can't be empty
+          First Name is not valid
         </span>
         <br>
-
         <input class="visibleText" type="text" name="lastname" ng-model="sign.user.lastname" placeholder="Last Name" required>
         <span ng-if="(signForm.lastname.$error.required && signForm.lastname.$touched)">
-            Lastname can't be empty
+            Lastname is not valid.
         </span>
         <br>
         <input class="visibleText" type="email" name="email" ng-model="sign.user.email" placeholder="Email" required>
-        <span ng-if="(signForm.email.$error.required && signForm.email.$invalid && signForm.email.$touched)">
+        <span ng-if="((signForm.email.$error.required || signForm.email.$invalid) && signForm.email.$touched)">
             Email is not a valid address
         </span>
         <br>
         <input class="visibleText" type="text" name="phonenumber" ng-model="sign.user.phonenumber" placeholder="Phone Number" pattern="(\d{3})-(\d{3})-(\d{4})" required>
-        <span ng-if="(signForm.phonenumber.$error.required && signForm.phonenumber.$invalid && signForm.phonenumber.$touched)">
+        <span ng-if="((signForm.phonenumber.$error.required || signForm.phonenumber.$invalid) && signForm.phonenumber.$touched)">
             Phone number format is not valid
         </span>
         <br>
